# Actividad-3---M-todos-de-aprendizaje-supervisado

./: pyproject.toml  shell.nix
app/: no_supervisado.py  supervisado.py
