[project]
name = "actividad_3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "danielgm", email = "daniel.garcia@ezlo.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "sklearn>=0.0.post12",
    "scikit-learn>=1.5.0",
    "matplotlib>=3.9.0",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
